--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html> 
+<!-- <!DOCTYPE html> 
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="main.css">
 		
 		<title>Hauptseite Matilda</title>
 		
 	</head>
 	
-	<body>
+	<body class="genBackground">
 		<header>
 		<nav>
 		<div class="topnav" id="myTopnav">
-		<!--	<img class="logo" src="./Pictures/WRK_Logo.jpg" alt="Logo"> -->
+			<img class="logo" src="./Pictures/WRK_Logo.jpg" alt="Logo">
 			<a href="#matilda" class="active">MATILDA</a>
 			<div class="dropdown">
 			 <button class="dropbtn">Material
@@ -67,4 +68,4 @@
 			}
 		</script>
 	</body>
-</html>
+</html> -->
