--- a/src/main/resources/templates/mitarbeitereinheit.html
+++ b/src/main/resources/templates/mitarbeitereinheit.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
+ 	<head th:replace="/fragment/header :: header"></head>
 <title>Mitarbeitertyp-Einheitentyp</title>
 </head>
 <body>
-	<head th:replace="/fragment/header :: header"></head>
-<h3>Der Einheit Mitarbeitertypen zuweisen:</h3>
 <div class="container">		
+<h2>Der Einheit Mitarbeitertypen zuweisen:</h2>
     <form action="#" th:action="@{/mitarbeitereinheit}" th:object="${mitarbeitertyp_einheitentyp}" method="post">
     	
     	<p class="error-message"
@@ -56,40 +56,38 @@
        	th:each="error: ${#fields.errors('manzahl')}"
         th:text="${error}">Validation error</p>
        	</div>
-	
-        <p><input type="submit" value="Bestätigen" />
-        	
-        </p>
+        <p><input type="submit" value="Bestätigen" /> </p>
     </form>
-</div>
+<br>
+<br>
 <h2>Übersicht zugewiesener Mitarbeitertypen</h2>
 <div th:unless="${#lists.isEmpty(mitarbeitereinheiten)}">
 <table class="mainTable" id="sortTable">
-<thead>
-<tr>
-<th>Einheitentyp</th>
-<th>Anzahl</th>
-<th>Mitarbeitertyp</th>
-</tr>
-</thead>
-<dl th:each="mitarbeitertyp_einheitentyp : ${mitarbeitereinheiten}">
-<tr>
-<td th:text="${mitarbeitertyp_einheitentyp.einheitentyp.name}"></td>
-<td th:text="${mitarbeitertyp_einheitentyp.manzahl}"></td>
-<td th:text="${mitarbeitertyp_einheitentyp.mitarbeitertyp.kuerzel}"></td>
-<td>
-	<a href="#" data-th-href="@{/miteinupdate/{id}(id=${mitarbeitertyp_einheitentyp.id})}">
-	<input type="button" value="Ändern" class="buttons">
-	</a>
-</td>
-</tr>
+	<thead>
+		<tr>
+			<th>Mitarbeitertyp</th>
+			<th>Anzahl</th>
+			<th class="CellWithComment"><i class="far fa-question-circle"></i>
+				<span class="CellComment" >Ändern der bereits zugewiesene Mitarbeitertypen</span>
+			</th>
+		</tr>
+	</thead>
+	<dl th:each="mitarbeitertyp_einheitentyp : ${mitarbeitereinheiten}">
+	<tr>
+		<td th:text="${mitarbeitertyp_einheitentyp.mitarbeitertyp.kuerzel}"></td>
+		<td th:text="${mitarbeitertyp_einheitentyp.manzahl}"></td>
+		<td>
+			<a href="#" data-th-href="@{/miteinupdate/{id}(id=${mitarbeitertyp_einheitentyp.id})}">
+			<input type="button" value="Ändern" class="buttons">
+			</a>
+		</td>
+	</tr>
 </table>
 </div>
 <div th:if="${#lists.isEmpty(mitarbeitereinheiten)}">
-<p>Es gibt noch keine Zuweisungen..</p>
+	<p>Es gibt noch keine Zuweisungen..</p>
 </div>
 <hr/>
-<div class="container">
 <input type="button" value="Zurück" class="bigButtons" onClick="gotoEinheitentyp()"/>
         	<script>
         	function gotoEinheitentyp() {
