--- a/src/main/resources/templates/veranstaltung.html
+++ b/src/main/resources/templates/veranstaltung.html
@@ -1,79 +1,74 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-
-<head th:fragment="head">
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/modal.css}" />
-<head th:replace="/fragment/header :: header"></head>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+	<head th:fragment="head">
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css}" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/modal.css}" />
+	<head th:replace="/fragment/header :: header"></head>
 <body class="genBackground">
-
-<title>Veranstaltung</title>
-
+<div class="container">		
 <h2>Übersicht Veranstaltungen</h2>
 <div th:unless="${#lists.isEmpty(veranstaltungen)}">
 <table class="mainTable" id="sortTable">
-<thead>
+	<thead>
+		<tr>
+			<th th:edit="false">Name</th>
+			<th>Lagerstandort</th>
+			<th>Beginn</th>
+			<th>Ende</th>
+			<th>Zustand</th>
+			<th>Ersteller</th>
+			<th class="CellWithComment"><i class="far fa-question-circle"></i>
+				<span class="CellComment" >Ändern der Veranstaltung</span>
+			</th>
+			<th class="CellWithComment"><i class="far fa-question-circle"></i>
+				<span class="CellComment">Veranstaltungen Einheitentypen zuweisen</span>
+			</th>
+			<th class="CellWithComment"><i class="far fa-question-circle"></i>
+				<span class="CellComment" >Buchungen zu den Veranstaltung</span>
+			</th>
+			<th class="CellWithComment"><i class="far fa-question-circle"></i>
+				<span class="CellComment" >Liste des gebuchten Materials</span>
+			</th>
+		</tr>
+	</thead>
+	<dl th:each="veranstaltung : ${veranstaltungen}">
 	<tr>
-		<th th:edit="false">Name</th>
-		<th>Lagerstandort</th>
-		<th>Beginn</th>
-		<th>Ende</th>
-		<th>Zustand</th>
-		<th>Ersteller</th>
-		<th class="CellWithComment">!
-			<span class="CellComment" >Ändern der Veranstaltung</span>
-		</th>
-		<th class="CellWithComment">!
-			<span class="CellComment" >Der Veranstaltung Einheitentypen zuweisen</span>
-		</th>
-		<th class="CellWithComment">!
-			<span class="CellComment" >Buchungen zu der Veranstaltung</span>
-		</th>
-		<th class="CellWithComment">!
-			<span class="CellComment" >Liste des gebuchten Materials</span>
-		</th>
+		<td th:text="${veranstaltung.name}"></td>
+		<td th:text="${veranstaltung.lagerstandort.name}"></td>
+		<td th:text="${veranstaltung.beginn}"></td>
+		<td th:text="${veranstaltung.ende}"></td>
+		<td th:text="${veranstaltung.zustand}"></td>
+		<td th:text="${veranstaltung.modifiedBy}"></td>
+		<td>
+			 <a href="#" data-th-href="@{/veranstaltungupdate/{id}(id=${veranstaltung.id})}">
+			<input type="Button" value="Ändern" class="buttons" />
+			</a>
+		</td>
+		<td>
+			<a href="#" data-th-href="@{/veranstaltungeinheit/{id}(id=${veranstaltung.id})}">
+			<input type="Button" value="Einheitentyp" class="buttons" />
+			</a>
+		</td>
+		<td>
+			<a href="#" data-th-href="@{/veranstaltungbuchung/{id}(id=${veranstaltung.id})}">
+				<input type="Button" value="Buchen" class="buttons" />
+			</a>
+		</td>
+		<td>
+			<a href="#" data-th-href="@{/veranstaltunggebucht/{id}(id=${veranstaltung.id})}">
+				<input type="Button" value="gebuchtes Material" class="buttons" />
+			</a>
+		</td>
 	</tr>
-</thead>
-<dl th:each="veranstaltung : ${veranstaltungen}">
-<tr>
-<td th:text="${veranstaltung.name}"></td>
-<td th:text="${veranstaltung.lagerstandort.name}"></td>
-<td th:text="${veranstaltung.beginn}"></td>
-<td th:text="${veranstaltung.ende}"></td>
-<td th:text="${veranstaltung.zustand}"></td>
-<td th:text="${veranstaltung.modifiedBy}"></td>
-<td>
-	 <a href="#" data-th-href="@{/veranstaltungupdate/{id}(id=${veranstaltung.id})}">
-	<input type="Button" value="Ändern" class="buttons" />
-	</a>
-</td>
-<td>
-	<a href="#" data-th-href="@{/veranstaltungeinheit/{id}(id=${veranstaltung.id})}">
-	<input type="Button" value="Einheitentyp" class="buttons" />
-	</a>
-</td>
-<td>
-	<a href="#" data-th-href="@{/veranstaltungbuchung/{id}(id=${veranstaltung.id})}">
-		<input type="Button" value="Buchen" class="buttons" />
-	</a>
-</td>
-<td>
-	<a href="#" data-th-href="@{/veranstaltunggebucht/{id}(id=${veranstaltung.id})}">
-		<input type="Button" value="gebuchtes Material" class="buttons" />
-	</a>
-</td>
-</tr>
-
-		</table>
+</table>
 </div>
 <div th:if="${#lists.isEmpty(veranstaltungen)}">
 <p>Es gibt keine Veranstaltung</p>
@@ -151,6 +146,7 @@
                    	Gebuchte Materialien wurde storniert.
                 </div>
             </div>
+</div>
 <script type="text/javascript" th:src="@{/js/sortTable.js}" /></script>
 <script type="text/javascript" th:src="@{/js/modal.js}" /></script>
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
