--- a/src/main/resources/templates/veranstaltungbuchung.html
+++ b/src/main/resources/templates/veranstaltungbuchung.html
@@ -5,51 +5,61 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<title th:text="@{${@environment.getProperty('matilda.events')}}" />
+	<title th:text="@{${@environment.getProperty('matilda.events')}}"></title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
  	<head th:replace="/fragment/header :: header"></head>
 </head>
-	<body>
-<h2>Buchung für Veranstaltung</h2>
+<body class="genBackground">
 <div class="container">
+<h2>Buchung für Veranstaltung</h2>
 <table class="mainTable">
-	<tr>
-		<th>Einheitentyp</th>
-		<th>Materialtyp</th>
-		<th>Standardmenge</th>
-		<th>Wunschmaterial</th>
-		<th>Wunschmenge</th>
-	</tr>
-	<tr  th:each="vb : ${veranstaltungBuchungWrapper.buchungList}">
-		<td th:text="${vb.getEinheitentyp().getName()}"></td>	
-		<td th:text="${vb.getMaterialtyp().getName()}"></td>
-		<td th:text="${vb.getStandardMenge()}"></td>
-		<td th:text="${vb.getWunschMaterial()}"></td>
-		<td th:text="${vb.getWunschMenge()}"></td>
-		<td>
-			<a href="#" data-th-href="@{/veranstaltungbuchungupdate/{id}(id=${vb.id})}">
-			<input type="button" value="Bearbeiten" class="buttons"/>
-			</a>
-		</td>		
-	</tr>
+	<thead>
+		<tr>
+			<th>Einheitentyp</th>
+			<th>Materialtyp</th>
+			<th>Standardmenge</th>
+			<th>Wunschmaterial</th>
+			<th>Wunschmenge</th>
+			<th class="CellWithComment"><i class="far fa-question-circle"></i>
+				<span class="CellComment" >Material und gewünschte Menge ändern</span>
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr  th:each="vb : ${veranstaltungBuchungWrapper.buchungList}">
+			<td th:text="${vb.getEinheitentyp().getName()}"></td>	
+			<td th:text="${vb.getMaterialtyp().getName()}"></td>
+			<td th:text="${vb.getStandardMenge()}"></td>
+			<td th:text="${vb.getWunschMaterial()}"></td>
+			<td th:text="${vb.getWunschMenge()}"></td>
+			<td>
+				<a href="#" data-th-href="@{/veranstaltungbuchungupdate/{id}(id=${vb.id})}">
+				<input type="button" value="Bearbeiten" class="buttons"/>
+				</a>
+			</td>		
+		</tr>
+	</tbody>
 </table>
-	<form action="#" th:action="@{/veranstaltungbuchung}" th:object="${veranstaltungBuchung}" method="post">
-		<p><input type="submit" value="Buchen" class="bigButtons" /> </p>
-	</form>
-<input type="button" value="Zurück" onClick="gotoVeranstaltung()" class="bigButtons"/>
-			<script>
-				function gotoVeranstaltung()
-				{
-					window.location.href="../veranstaltung";
-				}
-			</script>
-<form th:action="@{/reset}" th:object="${veranstaltung}" method="post" >
-	<button type="submit" onclick="return Confirm('sicher?')" class="bigButtons">Reset</button>
-</form>
-	
+	<p>
+		<form action="#" th:action="@{/veranstaltungbuchung}" th:object="${veranstaltungBuchung}" method="post">
+			<p><input type="submit" value="Buchen" class="bigButtons" /> </p>
+		</form>
+		<form th:action="@{/reset}" th:object="${veranstaltung}" method="post" >
+			<button type="submit" onclick="return Confirm('sicher?')" class="bigButtons">Reset</button>
+		</form>
+	</p>
+<br>
+<hr>
+			<input type="button" value="Zurück" onClick="gotoVeranstaltung()" class="bigButtons"/>
+						<script>
+							function gotoVeranstaltung()
+							{	window.location.href="../veranstaltung";		}
+						</script>
+<br/>
 			<div th:if="${param.nomaterial}">
 				<div class="alert alert-info">Kein Material vorhanden</div>
 			</div>
