--- a/src/main/resources/templates/veranstaltungeinheit.html
+++ b/src/main/resources/templates/veranstaltungeinheit.html
@@ -6,15 +6,16 @@
 
 	<link rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
 	<head th:replace="/fragment/header :: header"></head>
 	<title>Veranstaltung-Einheitentyp</title>
 </head>
-<body>
-<h2> Einheiten zuweisen:</h2>
+<body class="genBackground">
 <div class="container">
+<h2> Einheiten zuweisen:</h2>
 <form action="#" th:action="@{/veranstaltungeinheit}" th:object="${veranstaltung_einheitentyp}" method="post">
 		
 		<p class="error-message"
@@ -50,7 +51,7 @@
         <p><input type="submit" value="Bestätigen" /> </p>
 </form>
 <br>
-<h3>bereits zugewiesene Einheiten</h3>
+<h2>bereits zugewiesene Einheiten:</h2>
 <div th:unless="${#lists.isEmpty(verein)}">
 <table class="mainTable">
 <thead>
@@ -58,37 +59,34 @@
 		<th>Veranstaltung</th>
 		<th>Einheitentyp</th>
 		<th>Bezeichnung</th>
-		<th class="CellWithComment">!
+		<th class="CellWithComment"><i class="far fa-question-circle"></i>
 			<span class="CellComment" >Bereits zugewiesene Einheiten ändern oder löschen</span>
 		</th>
 	</tr>
 </thead>
 <dl th:each="veranstaltung_einheitentyp : ${verein}">
-<tr>
-<td th:text="${veranstaltung_einheitentyp.veranstaltung.name}"></td>
-<td th:text="${veranstaltung_einheitentyp.einheitentyp.name}"></td>
-<td th:text="${veranstaltung_einheitentyp.bezeichnung}"></td>
-<td>
-	<a href="#" data-th-href="@{/veranstaltungeinheitupdate/{id}(id=${veranstaltung_einheitentyp.id})}">
-	<input type="Button" value="Ändern" class="buttons"/>
-	</a>
-</td>
-</tr>
+	<tr>
+		<td th:text="${veranstaltung_einheitentyp.veranstaltung.name}"></td>
+		<td th:text="${veranstaltung_einheitentyp.einheitentyp.name}"></td>
+		<td th:text="${veranstaltung_einheitentyp.bezeichnung}"></td>
+		<td>
+			<a href="#" data-th-href="@{/veranstaltungeinheitupdate/{id}(id=${veranstaltung_einheitentyp.id})}">
+			<input type="Button" value="Ändern" class="buttons"/>
+			</a>
+		</td>
+	</tr>
 </table>
 </div>
-</div>
-<div th:if="${#lists.isEmpty(verein)}">
-<p>Es gibt keine Veranstaltung</p>
-</div>
-<hr/>
-<input type="bigButtons" style="float: right; text-align: center" value="Beenden" onClick="gotoVeranstaltung()" class="bigButtons"/>
+		<input type="Button"  value="Beenden" onClick="gotoVeranstaltung()" class="bigButtons"/>
 			<script>
 				function gotoVeranstaltung()
 				{
 					window.location.href="../veranstaltung";
 				}
 			</script>
-
+<div th:if="${#lists.isEmpty(verein)}">
+	<p>Es gibt keine Veranstaltung</p>
+</div>
       <div class="col-md-6 col-md-offset-3">
             <div th:if="${param.success}">
                 <div class="alert alert-info">
@@ -101,7 +99,7 @@
                 </div>
             </div> 
        </div>
-
+</div>
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 </body>
