Changed title to get rid of environment call
* Changed title in html to hardcoded string instead of calling environment

--- a/src/main/resources/templates/mitarbeiterverwaltung.html
+++ b/src/main/resources/templates/mitarbeiterverwaltung.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
 <link rel="import" href="/fragment/topnav.html">
 </head>
-<title th:text="@{${@environment.getProperty('matilda.events')}}"></title>
+<title>Mitarbeiterverwaltung</title>
 <body>
 <head th:replace="/fragment/header :: header"></head>
 <div class="container">
