--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" th:href="@{/css/index.css}"/>
- 	<title th:text="@{${@environment.getProperty('matilda.passwordchange')}}"></title>
+ 	<title>Passwortaenderung</title>
 </head>
 	<body class="genBackground">
 		<head th:replace="/fragment/header :: header"></head>	
