Added title in material.html
* Added title in material.html

--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -9,6 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<title>Material</title>
 </head>
 <body class="genBackground">
 		<head th:replace="/fragment/header :: header"></head>	
