--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -10,16 +10,16 @@ h1 {
 	margin-left: 25px;
 }
 
-h2 {
+h2, h3 {
 	color: #222;
-	margin-left: 25px;
+	/* margin-left: 25px; */
 	font-family: Arial;
 }
 
-h3 {
+/* h3 {
 	color: #222;
 	margin-left: 25px;
-}
+} */
 
 h4 {
 	color: #b60e0c;
@@ -37,36 +37,20 @@ h4 {
 }
 
 .vertical-center {
-	min-height: 100%; /* Fallback for vh unit */
-	min-height: 100vh; /* You might also want to use
-                        'height' property instead.
-                        
-                        Note that for percentage values of
-                        'height' or 'min-height' properties,
-                        the 'height' of the parent element
-                        should be specified explicitly.
-  
-                        In this case the parent of '.vertical-center'
-                        is the <body> element */
-	/* Make it a flex container */
+	min-height: 100%;
+	min-height: 100vh; 
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
-	/* Align the bootstrap's container vertically */
 	-webkit-box-align: center;
 	-webkit-align-items: center;
 	-moz-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	/* In legacy web browsers such as Firefox 9
-     we need to specify the width of the flex container */
 	width: 100%;
-	/* Also 'margin: 0 auto' doesn't have any effect on flex items in such web browsers
-     hence the bootstrap's container won't be aligned to the center anymore.
-  
-     Therefore, we should use the following declarations to get it centered again */
+	
 	-webkit-box-pack: center;
 	-moz-box-pack: center;
 	-ms-flex-pack: center;
@@ -80,7 +64,7 @@ h4 {
 	/*	background-image: url("../pics/WRK_Logo.png"); */
 }
 
-/* ---------------------- BUTTONS ----------------------*/
+/*############################ BUTTONS ############################### */
 .buttons {
 	color: rgb(182, 14, 12);
 	font-size: 15px;
@@ -113,7 +97,7 @@ h4 {
 	text-decoration: none;
 }
 
-/* --------------------- BIGBUTTONS ----------------*/
+/*############################ BIGBUTTONS ############################### */
 .bigButtons {
 	color: #fff;
 	font-size: 16px;
@@ -155,7 +139,7 @@ h4 {
 	text-decoration: none;
 }
 
-/* ------------------ MAIN TABLE --------------- */
+/*############################ MAIN TABLE ############################### */
 table.mainTable {
 	border: 2px solid #A40808;
 	background-color: #F5F5F5;
@@ -229,9 +213,9 @@ table.mainTable input[type=text] {
 	text-align: center;
 }
 
+/*############################ TOOLTIPS ############################### */
 .CellWithComment {
 	position: relative;
-	background-image: 
 }
 
 .CellComment {
@@ -245,11 +229,12 @@ table.mainTable input[type=text] {
 	border-color: #b60e0c;
 	padding: 3px;
 	color: black;
-	top: 20px;
-	left: 20px;
+	bottom: 27px;
+	left: -1px;
 	font-weight: normal;
+	min-width: 10rem;
 }
 
 .CellWithComment:hover span.CellComment {
-	display: block;
+	display: inherit;
 }
